plang/testing/logs/false-incorrect/152/program152.p.p
wDr u8c fDeMH (Q) Bu.

ftU.
vAjS OU igVF (f3 Sbh kuQ (yt (Bnqm) XCym)) xf9iL :- x (MFlfc), (yS L (ZTL) (X) QyL), (eB X ibPh RCA2l, phoz; sqYy (R3J) (NX) (BIUVV) (PpaHL)), ((zp Ou (Lq) d (kOyni (iMfJB TMkgZ yLbt (OtL) Y) (XLKZe) (Q5PKk) (mq)))); (xw1 Ck0), ekm3 (vou) FKK.


zojw lj (t U S) mCWQ :- (lB6 EVe (kg (sxhjY (z kSa H75 CtO) MG j1t fHL) (Gsu5E))); ((asJ j (t foGY0 (KWX) (q6 e3 (Bt) wSwG) ag) (x0 WRw YSnTH) RqZ)); (((dHd))), z GLn, uybZ Hn Z0 (H).
armOh vQYeO (i) rp.
otyBd EyFAa (K8aj) :- evf N4 Y4o Lt (B).

d (xqY) (s (e6B) (Bx)) (qGfwI (Vx0) (d0) qFF8 (C4pcn)) C1 :- (((gv8c cGYN6 f bGp KnL2; wBQR (EQCR) afHrJ)), zA (q9R (t (Gy) (y1J)) (Pp70r) DX) wGBjZ y XK; b (n5Ts (jKY (Fqsw) KokRo) ajuUE (Xay4P) (OrMzo)) Xb7 (IWXpt); qGOa4, mPqT ZRV lBGE; (fK R)).

eh :- (((ms); yn Kz (rvgfq (b) (Dwk)) dHqq)), (bliZ (xxf KieP (p1LI HCfox fB3ly Ir) o), dTSX (x) X), pJWfN AG51v Z0gKW; x (p4 pS (UxJ46) cXY) u; (gicTM (cft8) J), (kfyRW (qt1gV (mLtlc F (Q) (su050 (zC (VPuN)) o (z)) (Sqcfw)) r (pFpvn (t xI5Y (Gr) cF qsF) (i ET0 (ImxU3) (u0W40 NVv (tvWL f (a (AjMn) ochP (z L0i Ew) (L))) (x))))) (Du) (MC) mm, iE); v9 (zHt (saGX (SQSiG) (X) bpdJ (Q)) (a6 X847J DP sA3m (I35xj)) (NxD) (kVEGf OE lD (l (vokum pdxH (oFQsF)) (MvF) Z1Bz0) (dXOl3))) OMCLn.
x0 (EblR) ak :- ((j1DW pg (GRxcz) V (MD6Jy); e (kT5UF (cSr5U (aHu BB6 S (aW6)) (z TC6l (tPcxV OJrh (eIp (Nwb)) VZi (k221 (dbTSG (o (yxY Xm FR dMfn) (Yv) (NBWR)) hq))) q A9nqn) iw) (t2MWd) OdvTi (WY)) (zEi), sCC wR B A6Kd); jRPS l4o; sO (r (o) M6eB) (x P4g), gRgx (Azx) Fk (s (mHt) (X) (i0F (bzX kaI4 VX Jcx4 (IS))) (ueF WCtUs (FHnTS))) (hdIf (N) (ZJ) (diyZH (HzrUh) jJa Jn J7x) wvFC)).

kURUm Vh3et (D0g) L9 vT.

zF5 UXf :- ((rk); (vIb3g); muO88 Swm IC; sRGo BH (A) mLT, t1 (LkC) (yTiKO (ntq (UV) (icBTs (kM NDX RHl) i) (VLojm) K1) (Q2iA) (M12hn)) (W8h), a); ib EXFEg (IBk); sr F66T1 p6I cwJ9U.


qh1 (Rp) i4 (t Fn (HhMuL)) n :- yb G y2O.


m (v5 cvr jRnhL AGb) (A) (xlaUt) (nz18 (l2X2 b o3MY) (ZQsi) (O)).


? (n aEVO (R) (gnr), sMhUg; iA; brLE; hub Y ePY6L G; m, cCr (XSf) (GEBR) n (ijVUV eo1W pKlmk CkYb), g80 (mOU (J)); (y8h aYqy, jotB)).


